group("demo_task"){
    testonly = true
    deps =[
        ":demo_task_executor",
        ":demo_task_thread_pool",
        ":demo_task_thread",
    ]
}

executable("demo_task_executor"){
    sources = [
        "demo_task_executor.cc"
    ]
    deps = [
         "//base",
    ]
}

executable("demo_task_thread_pool"){
    sources = [
        "demo_task_thread_pool.cc"
    ]

    deps = [
         "//base",
    ]
}

executable("demo_task_thread"){
    sources = [
        "demo_task_thread.cc"
    ]

    deps = [
         "//base",
    ]
}
